--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ title: Home
   <h1>Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		{% capture url_parts %} {{ post.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ url_parts }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
